--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <div class="about-grid">
         <div class="about-content">
-          <h3>Computer Science Engineer & Full-Stack Developer</h3>
+          <h3>Computer Science Engineer</h3>
 
           <p>
             I'm a 3rd year Computer Science student at NIT Andhra Pradesh with 
